--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
+    "jasmine-expect": "^3.8.3",
     "prettier": "^1.11.1",
     "prettier-eslint": "^8.8.1"
   }
