--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint -c .eslintrc.js --fix ./"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -44,6 +45,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.3.0",
     "jasmine-expect": "^3.8.3",
     "prettier": "^1.11.1",
     "prettier-eslint": "^8.8.1"
